# sower-jobs

./: .secrets.baseline  Jenkinsfile  README.md
.github/: auto-label.json  labeler.yml
.github/workflows/: image_build_push.yaml  integration_tests.yaml
delete_expired_objects/: delete_expired_objects.Dockerfile  delete_expired_objects_job.py
export_job/: Dockerfile  export_zip_from_manifest_job.py  pyproject.toml  temporary_api_key.py
manifest_indexing/: indexd_manifest_job.Dockerfile  indexd_manifest_job.py  manifest_indexing.Dockerfile  manifest_indexing_job.py  settings.py  utils.py
manifest_merging/: manifest_merging.Dockerfile  manifest_merging_job.py  settings.py  utils.py
metadata_delete_expired_objects/: README.md  metadata_delete_expired_objects.Dockerfile  metadata_delete_expired_objects_job.py
metadata_ingestion/: get_dbgap_metadata_manifest.Dockerfile  get_dbgap_metadata_manifest.py  metadata_ingestion.Dockerfile  metadata_ingestion_job.py  settings.py  utils.py
object_metadata/: object_metadata.Dockerfile  object_metadata_job.py
objects_delete/: delete_expired_objects.Dockerfile  delete_temp_objects.Dockerfile  delete_temp_objects_job.py
