[tool.poetry]
name = "export-job"
version = "5.0.2"
description = ""
authors = ["Mingfei Shao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gen3 = "^4.27.1"
boto3 = "^1.0.0"
cdiserrors = "^1.0.0"
urllib3 = "<=2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
